Manifests/08_security/kata_containers_ve_gvisor_manifest_2.yaml
# isolated-web-app isimli Pod nesnesi tanımlama dosyası
apiVersion: v1
kind: Pod
metadata:
  name: isolated-web-app
  namespace: untrusted-workloads
spec:
  runtimeClassName: gvisor # gVisor sanal çekirdeği ile çalıştır!
  containers:
  - name: web-server
    image: nginx:alpine
    ports:
    - containerPort: 80
