Manifests/08_security/pod_guvenlik_standartlari_manifest_1.yaml
# restricted-pod isimli Pod nesnesi tanımlama dosyası
apiVersion: v1
kind: Pod
metadata:
  name: restricted-pod
  namespace: production
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 10005
    runAsGroup: 30005
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: secure-app
    image: alpine:latest
    command: ["sleep", "3600"]
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      privileged: false
      capabilities:
        drop:
        - ALL
    resources:
      limits:
        cpu: "200m"
        memory: "128Mi"
      requests:
        cpu: "100m"
        memory: "64Mi"
