Manifests/08_security/networkpolicy_derin_dalis_manifest_1.yaml
# default-deny-all isimli NetworkPolicy nesnesi tanımlama dosyası
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: network-policy-tutorial
spec:
  podSelector: {} # Boş selector tüm podları hedef alır
  policyTypes:
  - Ingress
  - Egress
