Manifests/08_security/networkpolicy_derin_dalis_manifest_4.yaml
# database-policy isimli NetworkPolicy nesnesi tanımlama dosyası
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-policy
  namespace: network-policy-tutorial
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend # Sadece backend'den gelen istekleri kabul et
