Manifests/08_security/kyverno_politika_motoru_manifest_2.yaml
# require-env-label isimli ClusterPolicy nesnesi tanımlama dosyası
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-env-label
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-env-label
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Pod üzerinde 'environment' etiketi tanımlanmalıdır!"
      pattern:
        metadata:
          labels:
            environment: "?*"
